--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </section>
     </main>
 
-    <footer data-aos="fade-up">
+    <footer>
         <p>&copy; 2024 Rhythm Games API. All rights reserved.</p>
     </footer>
 
